Fixes to spacing and sizing

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -32,8 +32,8 @@ body, html {
   font-family: Circular;
   margin: 0;
   padding: 0;
-  overflow-x: hidden;
-  overflow-y: hidden;
+  width: 100vh;
+  height: 100vh;
 }
   * {
     box-sizing: border-box;
@@ -49,7 +49,7 @@ body, html {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    width: 50vw;
+    width: 50%;
     height: 100vh;
     justify-content: center;
     align-content: center;
@@ -153,11 +153,7 @@ h1.title span:nth-of-type(6n+6) {
     height: 100vh;
     font-weight: bold;
     width: 100vw;
-    position: absolute;
-    z-index: 1000;
     text-align: center;
-    top: 0;
-    left: 0;
     font-size: 1.25em;
   }
   .letters, .space {
@@ -170,8 +166,6 @@ h1.title span:nth-of-type(6n+6) {
   position: absolute;
   text-align: center;
   display: table;
-  top: 0;
-  left: 0;
   font-size: 1.25em;
   height: 100vh;
   width: 100vw;
